# batchrun

./: .gitignore  CMakeLists.txt  README.md  do_cmake.sh
src/: CMakeLists.txt  batchrun.c  batchrund.c
src/common/: CMakeLists.txt  common.c  common.h  logger.c  logger.h
src/test/: CMakeLists.txt  single-shell.c
